--- a/blog/algorithm/dp12.md
+++ b/blog/algorithm/dp12.md
@@ -16,13 +16,16 @@
 你可以认为每种硬币的数量是无限的。
 
 ```
+思路：
+
+经典背包问题，还是一般的套路
 
 代码实现：
 ```
 class Solution {
     public int coinChange(int[] coins, int amount) {
 
- 
+
     }
 }
 ```
