--- a/blog/algorithm/dp12.md
+++ b/blog/algorithm/dp12.md
@@ -18,14 +18,35 @@
 ```
 思路：
 
-经典背包问题，还是一般的套路
+背包问题变种,
 
 代码实现：
 ```
 class Solution {
     public int coinChange(int[] coins, int amount) {
-
-
+        if (coins == null || coins.length == 0) {
+          return -1;
+        }
+        if (amount <= 0) {
+          return 0;
+        }
+        int[] dp = new int[amount];
+        count(coins,amount, dp);
+        return dp[amount-1];
+    }
+    public int count(int[] coins,int amount,int[] dp) {
+      if (amount == 0) return 0;
+      if (amount < 0) return -1;
+      if (dp[amount-1] != 0) return dp[amount-1];
+      int min = Integer.MAX_VALUE;
+      for (int coin : coins) {
+        int num = count(coins, amount-coin, dp);
+        if (num < min && num >= 0) {
+          min = num + 1;
+        }
+      }
+      dp[amount-1] = (min == Integer.MAX_VALUE ? -1 : min);
+      return dp[amount-1];
     }
 }
 ```
