--- a/blog/algorithm/dp13.md
+++ b/blog/algorithm/dp13.md
@@ -39,7 +39,77 @@
 ```
 class Solution {
     public int change(int amount, int[] coins) {
+        int length = coins.length;
+        if (amount == 0) {
+            return 1;
+        }
+        if (length == 0) {
+            return 0;
+        }
+        int[][] dp = new int[length][amount+1];
+        for (int i=0; i<=amount; i++) {
+          if(i%coins[0] == 0) {
+            dp[0][i] = 1;
+          }
+        }
+        for (int i=0; i<length; i++) {
+          dp[i][0] = 1;
+        }
+        for (int i=1; i<length; i++) {
+          for (int j=1; j<=amount; j++) {
+            if (j<coins[i]) {
+              dp[i][j] = dp[i-1][j];
+            } else {
+              int time = j/coins[i];
+              int tempNum = 0;
+              for (int k=0; k<=time; k++) {
+                dp[i][j] += dp[i-1][j-k*coins[i]];
+              }
+            }
+          }
+        }
+        return dp[length-1][amount];
+    }
+}
+```
 
+优化代码：
+
+```
+class Solution {
+    public int change(int amount, int[] coins) {
+        int length = coins.length;
+        if (amount == 0) {
+            return 1;
+        }
+        if (length == 0) {
+            return 0;
+        }
+        int[][] dp = new int[length][amount+1];
+        for (int i=0; i<=amount; i++) {
+          if(i%coins[0] == 0) {
+            dp[0][i] = 1;
+          }
+        }
+        for (int i=0; i<length; i++) {
+          dp[i][0] = 1;
+        }
+        for (int i=1; i<length; i++) {
+          for (int j=1; j<=amount; j++) {
+            if (j<coins[i]) {
+              dp[i][j] = dp[i-1][j];
+            } else if (j==coins[i]) {
+              dp[i][j] = dp[i-1][j] + 1;
+            } else {
+              int time = j/coins[i];
+              int tempNum = 0;
+              for (int k=0; k<=time; k++) {
+                dp[i][j] += dp[i-1][j-k*coins[i]];
+              }
+            }
+          }
+        }
+        return dp[length-1][amount];
     }
 }
 ```
