--- a/blog/algorithm/dp13.md
+++ b/blog/algorithm/dp13.md
@@ -85,31 +85,29 @@ class Solution {
         if (length == 0) {
             return 0;
         }
-        int[][] dp = new int[length][amount+1];
+        int[] dp = new int[amount+1];
+        dp[0] = 1;
         for (int i=0; i<=amount; i++) {
           if(i%coins[0] == 0) {
-            dp[0][i] = 1;
+            dp[i] = 1;
           }
         }
-        for (int i=0; i<length; i++) {
-          dp[i][0] = 1;
-        }
         for (int i=1; i<length; i++) {
-          for (int j=1; j<=amount; j++) {
+          for (int j=amount; j>=1; j--) {
             if (j<coins[i]) {
-              dp[i][j] = dp[i-1][j];
+              dp[j] = dp[j];
             } else if (j==coins[i]) {
-              dp[i][j] = dp[i-1][j] + 1;
+              dp[j] = dp[j] + 1;
             } else {
               int time = j/coins[i];
               int tempNum = 0;
               for (int k=0; k<=time; k++) {
-                dp[i][j] += dp[i-1][j-k*coins[i]];
+                dp[j] += dp[j-k*coins[i]];
               }
             }
           }
         }
-        return dp[length-1][amount];
+        return dp[amount];
     }
 }
 ```
