--- a/blog/algorithm/dp13.md
+++ b/blog/algorithm/dp13.md
@@ -87,24 +87,19 @@ class Solution {
         }
         int[] dp = new int[amount+1];
         dp[0] = 1;
-        for (int i=0; i<=amount; i++) {
+        for (int i=1; i<=amount; i++) {
           if(i%coins[0] == 0) {
             dp[i] = 1;
           }
         }
         for (int i=1; i<length; i++) {
-          for (int j=amount; j>=1; j--) {
-            if (j<coins[i]) {
-              dp[j] = dp[j];
-            } else if (j==coins[i]) {
-              dp[j] = dp[j] + 1;
-            } else {
-              int time = j/coins[i];
-              int tempNum = 0;
-              for (int k=0; k<=time; k++) {
-                dp[j] += dp[j-k*coins[i]];
-              }
+          for (int j=amount; j>=coins[i]; j--) {
+            int time = j/coins[i];
+            int tempNum = 0;
+            for (int k=0; k<=time; k++) {
+              tempNum += dp[j-k*coins[i]];
             }
+            dp[j] = tempNum;
           }
         }
         return dp[amount];
